@@ -1,3 +1,8 @@
+2017-07-27  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	PR target/81534
+	* gcc.target/s390/pr81534.c: New test.
+
 2017-07-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/81555
